Fix spacings

--- a/design-tokens-a.css
+++ b/design-tokens-a.css
@@ -13,6 +13,11 @@
   --space-24: 3rem;
   --space-32: 4rem;
 
+  /* Size Factors */
+  --size-factor-small: 0.75;
+  --size-factor-medium: 1;
+  --size-factor-large: 1.25;
+
   /* Color Palette */
   --pano-purple-1: hsla(248, 67%, 95%, 1);
   --pano-purple-2: hsla(248, 67%, 80%, 1);
